1/10/12 use precipitate color for particles that come out of the shaker
1/10/12 adjust location of "Saturated!" indicator, use light gray background instead of white
1/10/12 base class for solute particles, specializations for precipitate particles and shaker particles
1/10/12 move precipitate particle orientation into model
1/10/12 make precipitate particles sit precisely on bottom of beaker
1/10/12 change min colors for K2CrO4 (RGB=255,255,199) and KMnO4 (RGB=255,0,255)
1/10/12 enable dropper when amount of solute is reduced below max
# 0.00.05 (60092) Jan 10, 2012
1/10/12 move dropper-specific image dependencies into DropperNode
1/10/12 add background image for empty dropper
1/10/12 add Dropper.empty, handle proper interaction with Shaker.enabled
1/10/12 replace Shaker.enabled with Shaker.empty
# 0.00.04 (60076) Jan 10, 2012
1/10/12 dev version for discussion of whether to make dropper transparent or translucent
1/10/12 dropper with transparent glass
# 0.00.03 (60074) Jan 10, 2012
1/10/12 dev version for discussion of whether to make dropper transparent or translucent
1/10/12 new dropper image, created by Noah P.
# 0.00.02 (60062) Jan 9, 2012
1/9/12 early dev version for discussion of dropper issues
1/9/12 use an unlicensed placeholder for dropper that will have proper shape and prospective
1/9/12 experimented with 3D beaker, JC and KP decided to stick with 2D
1/5/12 simplistic version of stock solution inside dropper glass, doesn't conform to glass shape
1/5/12 move responsibility for visibility of shaker and dropper into the model
1/5/12 make concentration meter read all liquids: solution in beaker, solvent faucet, drain faucet, dropper (handle intersection in view)
1/5/12 compute color of stock solution based on stock concentration
1/5/12 add color range for solutes (min-max), max is saturated, min is >0, interpolate based on concentration
1/5/12 initialize with zero solute