@@ -11,14 +11,13 @@ HIGH
 - add soluteInPlay to model = solution.soluteAmount + solute falling from shaker
 
 MEDIUM
+- BLLFaucetNode does not have its origin at the output pipe's center, which is where the Faucet model origin is; fix OutputFluidNode, too
 
 LOW
 - dropper flickers excessively while dragging
 - rotate button on dropper so that lighting direction is consistent
 - #3199, bigger slider thumb on FaucetNode
 - spend a little time on combo box popup issue (create ticket, low priority)
-- derive height of fluid columns coming out of faucets, instead of using hardcoded values (see ConcentrationCanvas)
-- derive faucet locations and pipe lengths based on beaker location and size (see ConcentrationModel)
 
 SIM-SHARING
 
